# Alinventory

./: Cargo.toml
crates/api/: Cargo.toml
crates/api/src/: config.rs  handlers.rs  main.rs
crates/api/static/: app.js
crates/api/templates/: index.html
crates/cli/src/: cli_menu.rs  main.rs
crates/core/: Cargo.toml
crates/core/src/: database.rs  inventory.rs  lib.rs  models.rs
