[package]
name = "core"
version = "0.1.0"
edition = "2024"

[dependencies]
rusqlite = { version = "0.29.0", features = ["bundled"] }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
r2d2 = "0.8.10"
r2d2_sqlite = "0.22.0"

# Add chrono for timestamps
chrono = { version = "0.4", features = ["serde"] }
